--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,13 @@ description = "Genomics Kernel Library"
 
 [build-dependencies]
 cc = "1.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[profile.release]
+debug = true
+
+[[bench]]
+name = "pairhmm"
+harness = false
