--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/philipc/gkl-rs"
 description = "Genomics Kernel Library"
 
 [dependencies]
+lazy_static = "1.3.0"
 
 [build-dependencies]
 cc = "1.0"
