--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,11 @@ jobs:
       run: |
         rustup install ${{matrix.rust}}
         rustup default ${{matrix.rust}}
-    - name: Test debug
-      run: cargo test --verbose
-    - name: Test release
-      run: cargo test --verbose --release
+    - run: cargo test --verbose
+    - run: cargo test --verbose --release
+    - run: cargo test --verbose --features c
+    - run: cargo test --verbose --features nightly
+      if: matrix.rust == 'nightly'
 
   bench:
     runs-on: ubuntu-latest
@@ -29,11 +30,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install rust
       run: |
-        rustup install stable
-        rustup default stable
+        rustup install nightly
+        rustup default nightly
         cargo install cargo-criterion
-    - name: Bench
-      run: cargo criterion --no-run
+    - run: cargo criterion --no-run
+    - run: cargo criterion --no-run --features c
+    - run: cargo criterion --no-run --features nightly
 
   rustfmt:
     runs-on: ubuntu-latest
